// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can select a pattern that matches multiple files 1`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> f
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 3 files

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>oo.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>ile-1.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>ile-2.js</intensity>
<moveCursorToRow6Column13>
<restoreCursorPosition>
<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> fi
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 2 files

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-1.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-2.js</intensity>
<moveCursorToRow6Column14>
<restoreCursorPosition>
"
`;

exports[`can use arrows to select a specific file 1`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> f
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 3 files

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>oo.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>ile-1.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>f</><dim>ile-2.js</intensity>
<moveCursorToRow6Column13>
<restoreCursorPosition>
<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> fi
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 2 files

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-1.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-2.js</intensity>
<moveCursorToRow6Column14>
<restoreCursorPosition>
<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> fi
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 2 files

 <dim>›</intensity> <black><backgroundYellow>src/file-1.js</background></color>

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-2.js</intensity>
<moveCursorToRow6Column14>
<restoreCursorPosition>
"
`;

exports[`file matching is case insensitive 1`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> fI
<saveCursorPosition>
<moveCursorToColumn1>


 Pattern matches 2 files

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-1.js</intensity>

 <dim>›</intensity> <dim>src/</intensity></>fi</><dim>le-2.js</intensity>
<moveCursorToRow6Column14>
<restoreCursorPosition>
"
`;

exports[`shows the correct initial state 1`] = `
"<hideCursor>
<clearTerminal>

<bold>Pattern Mode Usage</intensity>
 <dim>› Press</intensity> Esc <dim>to exit pattern mode.</intensity>
 <dim>› Press</intensity> Enter <dim>to filter by a filenames regex pattern.</intensity>


<showCursor>
<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
<dim> pattern ›</intensity> 
<saveCursorPosition>
<moveCursorToColumn1>


 <italic><yellow>Start typing to filter by a filename regex pattern.</color></italic>
<moveCursorToRow6Column12>
<restoreCursorPosition>
"
`;
